objects/VPPSR_Vehicle_Identifier__c.object
<CustomObject>
    <fields>
        <fullName>NevdisData__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NevdisData</label>
        <referenceTo>VPPSR_NevdisData__c</referenceTo>
        <relationshipName>Vehicle_Identifiers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>identifier_Type__c</fullName>
        <label>identifier Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>identifier_Value__c</fullName>
        <label>identifier Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>VPPSR Vehicle Identifier</label>
    <nameField>
        <displayFormat>VIDN-{00000000}</displayFormat>
        <label>Vehicle Identifier Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VPPSR Vehicle Identifiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>